# AI-CICD-Pipeline-Generator

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  USER_GUIDE.md  build_standalone.py  main.py  pyproject.toml  requirements.txt
app/core/: config.py  exceptions.py  logger.py  security.py  task_manager.py  thread_worker.py
app/database/: db.py  models.py
app/generators/: ansible_gen.py  docker_gen.py  helm_gen.py  k8s_gen.py  pipeline_gen.py  template_engine.py  tf_gen.py
app/modules/: analyzer.py  cost_estimator.py  pipeline_analyzer.py  repo_scanner.py  simulator.py
app/plugins/: base_plugin.py  plugin_manager.py
app/reports/: report_gen.py
app/services/: ai_providers.py  ai_service.py  export_service.py
app/ui/: ai_dock.py  analyzer_widget.py  dashboard.py  editor.py  main_window.py  plugin_ui.py  settings.py  simulator_widget.py  style.py  templates_widget.py  theme.py  wizard.py
app/ui/components/: animation_helper.py  code_editor.py  command_palette.py  log_viewer.py  status_bar.py  syntax_highlighter.py  toast_notification.py
app/validators/: docker_val.py  k8s_val.py  pipeline_val.py  tf_val.py
templates/docker/: python.dockerfile
templates/github/: python_django.yml
tests/: test_backend.py  test_config.py  test_generators.py  test_security.py
